--- a/src/questions/end.html
+++ b/src/questions/end.html
@@ -10,6 +10,7 @@
 <link rel="shortcut icon" href="favicon.ico?2"/>
 </head>
 <body>
+<header><h1><a href="index.html">Advent of Code</a></h1><div class="user">Shahar Talmi <span class="star-count">50*</span></div></header>
 <main>
 <article>
 <p>You fill the weather machine with <span class="day-success">fifty stars</span>.  It comes to life!</p>
