--- a/src/questions/index.html
+++ b/src/questions/index.html
@@ -9,6 +9,7 @@
 <link rel="shortcut icon" href="favicon.ico?2"/>
 </head>
 <body>
+<header><h1><a href="index.html">Advent of Code</a></h1><div class="user">Shahar Talmi <span class="star-count">50*</span></div></header>
 <main>
 <pre class="tree tree-perfect"><a href="day25.html" class="tree-day25 tree-verycomplete">                        <span class="tree-lightbeam">|</span>
                        <span class="tree-lightbeam">\</span><span class="tree-lightbeam">|</span><span class="tree-lightbeam">/</span>
