--- a/src/questions/day24.html
+++ b/src/questions/day24.html
@@ -9,6 +9,7 @@
 <link rel="shortcut icon" href="favicon.ico?2"/>
 </head>
 <body>
+<header><h1><a href="index.html">Advent of Code</a></h1><div class="user">Shahar Talmi <span class="star-count">50*</span></div></header>
 <main>
 <style>article *[title]{border-bottom:1px dotted #ffff66;}</style><article class="day-desc"><h2>--- Day 24: It Hangs in the Balance ---</h2><p>It's Christmas Eve, and Santa is loading up the sleigh for this year's deliveries.  However, there's one small problem: he can't get the sleigh to balance.  If it isn't balanced, he can't defy physics, and nobody gets presents this year.</p>
 <p>No pressure.</p>
