--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to Events</title>
-<meta http-equiv="refresh" content="0; URL=https://shahata.github.io/adventofcode-solver/src/2019/events.html">
+<meta http-equiv="refresh" content="0; URL=src/2019/events.html">
